增加了代理访问google从而能够使用完整功能

--- a/package/translate/build
+++ b/package/translate/build
@@ -56,9 +56,13 @@ function relativePath() {
 catalogs=`find . -name '*.po' | sort`
 for cat in $catalogs; do
 	catLocale=`basename ${cat%.*}`
+    echoGray "[translate/build] catLocale: ${catLocale}"
 	moFilename="${catLocale}.mo"
 	installPath="${packageRoot}/contents/locale/${catLocale}/LC_MESSAGES/${projectName}.mo"
+    # 没有目录就创建
+    mkdir -p "$(dirname "$installPath")"
 	installPath=`realpath -- "$installPath"`
+    echoGray "[translate/build] installPath: ${installPath}"
 	relativeInstallPath=`relativePath "${packageRoot}" "${installPath}"`
 	relativeInstallPath="${relativeInstallPath#/*}"
 	echoGray "[translate/build] Converting '${cat}' => '${relativeInstallPath}'"
